<resources>
    <string name="app_name">Streekx Search</string>
    <string name="search_hint">Search with Streekx...</string>
    <string name="discover_text">Discover</string>
    
    <string name="sso_login">Streekx Single Sign-On</string>
    <string name="menu_searches">Searches</string>
    <string name="menu_threads">Threads</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_security">Security</string>
    
    <string name="filter_ai">AI Search</string>
    <string name="filter_all">All</string>
    <string name="filter_images">Images</string>
    <string name="filter_videos">Videos</string>
</resources>
